--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,15 @@ android {
         exclude 'META-INF/LICENSE-FIREBASE.txt'
         exclude 'META-INF/NOTICE'
     }
+
 }
 
 dependencies {
-    compile 'com.firebase:firebase-client-android:2.5.0+'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.google.android.gms:play-services-auth:8.3.0'
+    compile 'com.firebase:firebase-client-android:2.5.0+'
+    //compile 'com.google.android.gms:play-services-auth:8.3.0'
+    compile 'com.google.android.gms:play-services:8.3.0'
+    //compile 'com.google.android.gms:play-services:8.4.0'
 }
